--- a/src/components/ModalWithForm/modal.css
+++ b/src/components/ModalWithForm/modal.css
@@ -194,11 +194,15 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
+  .modal {
+    align-items: normal;
+  }
+
   .modal__container {
     padding: 0;
     max-width: 320px;
     height: 560px;
-    top: 52px;
+    top: 56px;
   }
 
   .modal__form {
